--- a/app/src/main/res/layout/activity_paint_area.xml
+++ b/app/src/main/res/layout/activity_paint_area.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:pikolo="http://schemas.android.com/apk/res-auto"
     tools:context=".DrawAreaActivity">
 
     <com.example.paintapp.DrawView
@@ -35,6 +36,7 @@
         android:layout_marginBottom="4dp"
         android:background="@drawable/back"
         android:contentDescription="@string/back_to_menu"
+        android:visibility="invisible"
         android:rotation="-90"
         app:layout_constraintBottom_toTopOf="@+id/instrument_panel"
         app:layout_constraintEnd_toEndOf="parent"
@@ -54,12 +56,15 @@
             android:id="@+id/drawWidth"
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:max="100"
+            android:progress="23"
+            android:progressDrawable="@drawable/seekbar_style"
+            android:thumb="@drawable/seekbar_custom_thumb"
+            android:maxHeight="5dp"
+            app:layout_constraintBottom_toTopOf="@id/btn_palette"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/btn_palette"
-            android:max="100"
-            android:progress="23"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
             android:id="@+id/btn_palette"
@@ -128,7 +133,63 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/drawWidth" />
 
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/colorPickerWrapper"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:animateLayoutChanges="true"
+        android:background="#CC000000"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <com.madrapps.pikolo.HSLColorPicker
+            android:id="@+id/colorPicker"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:hue_arc_length="360"
+            app:hue_indicator_stroke_width="0dp"
+            app:hue_radius_offset="20dp"
+            app:hue_start_angle="270"
+
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+
+            app:layout_constraintTop_toTopOf="parent"
+            app:lightness_arc_length="140"
+            app:lightness_indicator_stroke_width="0dp"
+
+            app:lightness_radius_offset="70dp"
+            app:lightness_start_angle="110"
+            app:saturation_arc_length="140"
+
+            app:saturation_indicator_stroke_width="0dp"
+            app:saturation_radius_offset="70dp"
+            app:saturation_start_angle="290"
+
+            tools:layout_constraintBottom_creator="1"
+            tools:layout_constraintLeft_creator="1"
+            tools:layout_constraintRight_creator="1"
+            tools:layout_constraintTop_creator="1" />
+
+        <ImageButton
+            android:id="@+id/btn_pick_color"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/colorpicker_circle"
+            android:contentDescription="@string/pick_color"
+            app:backgroundTint="@color/white"
+            app:layout_constraintBottom_toBottomOf="@+id/colorPicker"
+            app:layout_constraintEnd_toEndOf="@+id/colorPicker"
+            app:layout_constraintStart_toStartOf="@+id/colorPicker"
+            app:layout_constraintTop_toTopOf="@+id/colorPicker" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
