--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,8 @@
     <color name="white">#FFFFFFFF</color>
     <color name="light_gray">#e6e6e6</color>
     <color name="dark_gray">#3f403f</color>
+    <color name="light_blue">#126cff</color>
+    <color name="light_blue_d1">#0c54c9</color>
+    <color name="light_blue_d2">#3F51B5</color>
+    <color name="colorAccent">#FF4081</color>
 </resources>
